--- a/cadastro.html
+++ b/cadastro.html
@@ -19,7 +19,7 @@
 </div>
   <div id="main-container">
     <h1>Cadastre-se para acessar o sistema</h1>
-    <form id="register-form" method="post" action="cadastro.php">
+    <form id="register-form" method="post" action="registro.php">
       <div class="full-box">
         <label for="email">E-mail</label>
         <input type="email" name="email" id="email" placeholder="Digite seu e-mail" data-min-length="2"
@@ -30,28 +30,22 @@
         <input required type="text" name="nome" id="nome" placeholder="Digite seu nome" data-required data-min-length="3"
           data-max-length="16">
       </div>
-      <div class="half-box spacing">
-        <label for="senha">Senha</label>
-        <input required type="password" name="senha" id="senha" placeholder="Digite sua senha" data-password-validate
-          data-required>
-      </div>
       <div class="half-box">
         <label for="phone">Telefone</label>
         <input required type="tel" name="telefone" id="telefone" placeholder="Telefone">
-      </div>
+      </div><br>
       <div class="full-box">
         <input id="btn-submit" type="submit" value="Receber Código">
        </div>
        <div class="full-box">
         <input required type="text" name="codAcesso" id="codAcesso" placeholder="Código de Acesso">
-       </div>
+       </div><br>
        <div class="full-box"> 
         <input id="btn-submit" type="submit" value="Registrar">
       </div>
     </form>
   </div>
   <p class="error-validation template"></p>
-  <script src="cadastro.js"></script>
 </body>
 
 </html>
